<resources>
    <string name="app_name">SensorSi</string>
    <string name="action_settings_logout">Log out</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="scan">Scan</string>
    <string name="connect">Connect</string>
    <string name="connected_device">Connected Device</string>
    <string name="sensor_types">Sensor Types</string>
    <string name="get_data">Get Data</string>

    <string name="email_placeholder">name@example.com</string>
    <string name="password_placeholder">**************</string>
    <string name="new_here">New here?</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>

    <string name="name_placeholder">Username</string>
    <string name="old_here">Already have an account?</string>
    <string name="pass_placeholder">Password</string>
    <string name="confirm_placeholder">Confirm password</string>

    <string name="node_details">Details</string>
    <string name="sensor1_name">Gaz</string>
    <string name="sensor2_name">Temperatura</string>
    <string name="node_name">Node1</string>

    <string name="live_data">Live Data</string>
    <string name="log_data">Log Data</string>
    <string name="all_data">All Data</string>
    <string name="add_node">add node</string>
    <string name="logo">logo</string>

    <string name="sensor_data_text">Live Sensor Data</string>
    <string name="sensor_data_value">Unavailable</string>

    <string name="sensor_name">Sensor Name</string>
    <string name="bluetooth_device_name">BlueTooth Device Name</string>
    <string name="time">Time</string>
    <string name="value">Value</string>
    <string name="stop">Stop</string>
    <string name="reading_all_data">Reading All Data</string>
    <string name="type">Type</string>

</resources>